build: output JavaScript files under dist/ext/js/
The root directory of our add-on package is becoming cluttered because
it contains both sourcemaps and JS files (which is currently 5*2=10 files).
Also, the change simplifies the build step that adjusts sourcemaps a bit.

--- a/ext/options.html
+++ b/ext/options.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="module" src="options.js"></script>
+    <script type="module" src="js/options.js"></script>
   </head>
   <body>
     <h1>Ghostbird: GhostText for Thunderbird</h1>
