feat: implement a simple option page #3
Squashed commit of the following:

commit 48466481cd4088cb4f6345790d2484657fc72b2a
Author: snipsnipsnip <snipsnipsnip@localhost.simplelogin.com>
Date:   Tue Sep 23 15:59:30 2025 +0900

    fix: address warnings from the AMO add-on validator

    * In the compose script, the HTML body should be parsed and appended rather
      than setting `innerHTML` directly.
    * Add a `data_collection_permissions` key that will be used to notify users
      about the personal data the add‑on collects; in our case it's `none`.

    https://blog.mozilla.org/addons/2025/05/09/new-extension-data-consent-experience-now-available-in-firefox-nightly/

commit 08da8131e7879d15bca676d51b55b4734779ec62
Author: snipsnipsnip <snipsnipsnip@localhost.simplelogin.com>
Date:   Sun Sep 21 22:24:33 2025 +0900

    feat: send a readable hostname to the GhostText server

    Ghostbird used to send a random UUID generated by Thunderbird as the
    `url` field in the GhostText handshake. Send a more permanent value
    (the add-on ID defined in the `manifest.json`) instead of UUIDs.
    While we're at it, modify the add-on ID to include `addons.thunderbird`
    to make it clearer that this is a Thunderbird add-on. The change is
    needed because moving the `description` to `messages.json` made it less
    obvious.

commit 9dd96f0eeb96d771fd90495bbd455c9416a3d7fd
Author: snipsnipsnip <snipsnipsnip@localhost.simplelogin.com>
Date:   Sun Sep 21 21:52:12 2025 +0900

    feat: implement a simple option page #3

--- a/ext/options.html
+++ b/ext/options.html
@@ -2,15 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Ghostbird Options</title>
     <script type="module" src="js/options.js"></script>
+    <link rel="stylesheet" href="options.css">
   </head>
   <body>
-    <h1>Ghostbird: GhostText for Thunderbird</h1>
-    <p>
-      Options are still in development. See
-      <a href="https://github.com/exteditor/ghostbird/">GitHub page</a>for the
-      roadmap.
-    </pp>
-    <ghostbird-options></ghostbird-options>
+    <ghostbird-options>
+      <form>
+        <label for="serverPort"></label>
+        <label>
+          <input
+            id="serverPort"
+            name="serverPort"
+            type="number"
+            min="1"
+            max="65535"
+            size="4"
+          >
+        </label>
+        <span></span>
+        <span
+          ><input type="reset"></span
+        >
+      </form>
+      <div class="progress"></div>
+    </ghostbird-options>
   </body>
 </html>
