feat: add an option to turn off notifications

--- a/ext/options.html
+++ b/ext/options.html
@@ -18,6 +18,15 @@
             min="1"
             max="65535"
             size="4"
+            required
+          >
+        </label>
+        <label for="enableNotifications"></label>
+        <label>
+          <input
+            id="enableNotifications"
+            name="enableNotifications"
+            type="checkbox"
           >
         </label>
         <span></span>
