docs: add a navigation bar to the webpage

--- a/.github/site/index.html
+++ b/.github/site/index.html
@@ -7,10 +7,15 @@
   <meta name="description" content="Ghostbird is a Thunderbird add-on that connects your text editor with Thunderbird's email compose window, allowing you to edit the message in the text editor.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/themes/vue.min.css">
-  <link rel="icon" href="ext/blue.svg" />
+  <link rel="icon" href="ext/blue.svg">
   <script type="module" src="index.mjs"></script>
 </head>
 <body>
+  <nav>
+    <a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a>
+    <a href="#/doc/faq">&#x2753; FAQ</a>
+    <a href="https://translate.kagi.com/exteditor.github.io/ghostbird/">&#x1f30d; Translation</a>
+  </nav>
   <div id="app"></div>
 </body>
 </html>
