--- a/.github/site/index.html
+++ b/.github/site/index.html
@@ -11,11 +11,6 @@
   <script type="module" src="index.mjs"></script>
 </head>
 <body>
-  <nav>
-    <a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a>
-    <a href="#/doc/faq">&#x2753; FAQ</a>
-    <a href="https://translate.kagi.com/exteditor.github.io/ghostbird/">&#x1f30d; Translation</a>
-  </nav>
-  <div id="app"></div>
+  <div id="app"><a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a></div>
 </body>
 </html>
