docs: tweak the cover page

--- a/.github/site/index.html
+++ b/.github/site/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/themes/vue.min.css">
   <link rel="icon" href="ext/blue.svg">
   <script type="module" src="index.mjs"></script>
+  <style>
+    section.cover blockquote { margin: 0 }
+  </style>
 </head>
 <body>
   <div id="app"><a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a></div>
