docs: configure OpenGraph card in the webpage

--- a/.github/site/index.html
+++ b/.github/site/index.html
@@ -12,6 +12,12 @@
   <style>
     section.cover blockquote { margin: 0 }
   </style>
+  <meta property="og:image" content="https://repository-images.githubusercontent.com/1054373981/354c0de9-d238-4139-a9ed-ba116f3d439e">
+  <meta property="og:image:alt" content="Ghostbird: GhostText for Thunderbird">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Ghostbird: GhostText for Thunderbird">
+  <meta property="og:url" content="https://exteditor.github.io/ghostbird/">
+  <meta property="og:description" content="Ghostbird: Compose emails using your favorite text editor in Thunderbird">
 </head>
 <body>
   <div id="app"><a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a></div>
