docs: try importmap in the webpage

--- a/.github/site/index.html
+++ b/.github/site/index.html
@@ -1,25 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Ghostbird: GhostText for Thunderbird</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Ghostbird is a Thunderbird add-on that connects your text editor with Thunderbird's email compose window, allowing you to edit the message in the text editor.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/themes/vue.min.css">
-  <link rel="icon" href="ext/blue.svg">
-  <script type="module" src="index.mjs"></script>
-  <style>
-    section.cover blockquote { margin: 0 }
+  <head>
+    <meta charset="UTF-8">
+    <title>Ghostbird: GhostText for Thunderbird</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta
+      name="description"
+      content="Ghostbird is a Thunderbird add-on that connects your text editor with Thunderbird's email compose window, allowing you to edit the message in the text editor."
+    >
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    >
+    <link rel="icon" href="ext/blue.svg">
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/docsify@4.13.1/lib/themes/vue.css"
+      integrity="sha256-H43c3hD+HZ86tg3oRp7Sb5sJcW+4grIl1mbU9ig43i4="
+      crossorigin="anonymous"
+    >
+    <script type="importmap">
+    {
+      "imports": {
+        "mermaid": "https://cdn.jsdelivr.net/npm/mermaid@11.12.0/dist/mermaid.esm.min.mjs",
+        "docsify": "https://cdn.jsdelivr.net/npm/docsify@4.13.1/lib/docsify.min.js",
+        "docsify/plugins/search": "https://cdn.jsdelivr.net/npm/docsify@4.13.1/lib/plugins/search.min.js"
+      },
+      "integrity": {
+        "https://cdn.jsdelivr.net/npm/mermaid@11.12.0/dist/mermaid.esm.min.mjs": "sha256-dloSMf8Nxfp4hkTMnxf4acGB56KK1OVj0kMlsNrZPRM=",
+        "https://cdn.jsdelivr.net/npm/docsify@4.13.1/lib/docsify.min.js": "sha256-kSP4CNP2rXNrSo+ZlEphH4fF1PkygDAIClwCntX0UKU=",
+        "https://cdn.jsdelivr.net/npm/docsify@4.13.1/lib/plugins/search.min.js": "sha256-qyB5Lcad/ZzbGUefcW9pphnld97EUnORlncBNN1x8pc="
+      }
+    }
+  </script>
+    <script type="module" src="index.mjs"></script>
+    <style>
+    section.cover blockquote {     margin: 0    }
   </style>
-  <meta property="og:image" content="https://repository-images.githubusercontent.com/1054373981/354c0de9-d238-4139-a9ed-ba116f3d439e">
-  <meta property="og:image:alt" content="Ghostbird: GhostText for Thunderbird">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Ghostbird: GhostText for Thunderbird">
-  <meta property="og:url" content="https://exteditor.github.io/ghostbird/">
-  <meta property="og:description" content="Ghostbird: Compose emails using your favorite text editor in Thunderbird">
-</head>
-<body>
-  <div id="app"><a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a></div>
-</body>
+    <meta
+      property="og:image"
+      content="https://repository-images.githubusercontent.com/1054373981/354c0de9-d238-4139-a9ed-ba116f3d439e"
+    >
+    <meta
+      property="og:image:alt"
+      content="Ghostbird: GhostText for Thunderbird"
+    >
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ghostbird: GhostText for Thunderbird">
+    <meta property="og:url" content="https://exteditor.github.io/ghostbird/">
+    <meta
+      property="og:description"
+      content="Ghostbird lets you Compose emails using your favorite text editor in Thunderbird"
+    >
+  </head>
+
+  <body>
+    <div id="app">
+      <a href="https://github.com/exteditor/ghostbird/">&#x1faba; GitHub</a>
+    </div>
+  </body>
 </html>
